[project]
name = "final-project-se333-nigelmaloney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
